--- a/TXD/StartGame.html
+++ b/TXD/StartGame.html
@@ -85,7 +85,7 @@
     <div style="overflow:hidden;padding:0;margin:0;width:100%;height:100%;">
         <div id="gameDiv" style="position:relative;"></div>
     </div>
-    <script src='http://engine.zuoyouxi.com/lib/1.1.6/qc-loading.js'></script>
+    <script src='js/load.js'></script>
 </body>
 
 </html>
